2017/01/01:
Makefile fix: filter out '\r' in the output of menhir --suggest-ocamlfind,
so that the Makefile works when Menhir is compiled as a Windows executable.
(Suggested by Jonathan Protzenko.)

2016/12/01:
Updated the Coq back-end for compatibility with Coq 8.6.
(Jacques-Henri Jourdan.)

2016/11/15:
Fix in --only-preprocess-for-ocamlyacc mode: avoid printing newline characters
inside a %type declaration, as this is forbidden by ocamlyacc. (Reported by
Kenji Maillard.)
Fix in --only-preprocess-for-ocamlyacc mode: avoid variable capture caused by
ocamlyacc internally translating $i to _i. (Reported by Kenji Maillard.)

2016/09/01:
New command line switch --only-preprocess-for-ocamlyacc, supposed to print the
grammar in a form that ocamlyacc can accept. As of now, this feature is
incomplete (in particular, support for Menhir's position keywords is missing),
untested, and undocumented. It could be removed in the future.

2016/08/26:
Fixes in the output of --only-preprocess:
  The order of productions is now preserved.
    (It was not. This matters if there are reduce/reduce conflicts.)
  %parameter directives are now printed. (They were not).
  %on_error_reduce directives are now printed. (They were not.)

2016/08/25:
Makefile fix, undoing a change made on 2016/03/03, which caused installation
to fail under (some versions of?) Windows where dynamic linking is not
supported. (Reported by Andrew Appel.)

2016/08/05:
%on_error_reduce declarations now have implicit priority levels, so as to
tell Menhir what to do when two such declarations are applicable.
Also, the well-formedness checks on %type and %on_error_reduce declarations
have been reinforced.

2016/06/23:
A small change in the generated code (both in the code and table back-ends) so
as to avoid OCaml's warning 41. The warning would arise (when compiling a
generated parser with OCaml 4.03) because Menhir's exception [Error] has the
same name as the data constructor [Error] in OCaml's pervasive library.